update output folder

--- a/Benchmarking SNJ intro notebook.ipynb
+++ b/Benchmarking SNJ intro notebook.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "# Base parameters, no fitness\n",
     "in_folder = \"/data/yosef2/users/richardz/projects/CassiopeiaV2-Reproducibility/trees/exponential_plus_c/400cells/no_fit/char40/\"\n",
-    "out_folder = \"/data/yosef2/users/ivalexander13/scratch/benchmarking/\""
+    "out_folder = \"./benchmarking/\""
    ]
   },
   {
